[package]
name = "pyumya"
version = "0.1.0"
edition = "2021"
description = "Rust backend for pyumya — fast Excel R/W with formatting"

[lib]
name = "_rust"
path = "rust/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
umya-spreadsheet = { git = "https://github.com/wolfiesch/umya-spreadsheet.git", rev = "0ac65aa721a1f97fb1bd58c6822f42548b7af20e" }
chrono = "0.4"
