[package]
name = "pyumya"
version = "0.1.0"
edition = "2021"
description = "Rust backend for pyumya — fast Excel R/W with formatting"

[lib]
name = "_rust"
path = "rust/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
# Pinned to wolfiesch fork (2.3.3-compat + indent + hyperlink XML-unescape patches).
# TODO: Switch back to a released crate version once patches are merged upstream.
# See: https://github.com/MathNya/umya-spreadsheet/pull/308
umya-spreadsheet = { git = "https://github.com/wolfiesch/umya-spreadsheet", rev = "3e88efbe3f046759fa22f22e0a2e5dfa05ec77dc" }
chrono = "0.4"
