[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pyumya"
version = "0.1.0"
description = "Fast Excel (.xlsx) reader/writer with full formatting support, powered by Rust"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Wolfgang Schoenberger" }]
keywords = ["excel", "xlsx", "spreadsheet", "openpyxl", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "openpyxl>=3.1.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pyumya._rust"
python-source = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
